hcnc_init/src/main/resources/static/css/ui-style.css
/* ... */
.btn-left {display: inline-block; padding:30px 10px 5px 10px!important; background:url(../images/common/btn-left.png)#F2F5F9 no-repeat top 10px center; border:1px solid #5B6F88; border-radius: 4px; color:#5B6F88;}

.grid-btn .btn-plus{padding:8px 8px 6px 30px; background:url(../images/common/ico-plus.png) #F2F5F9 no-repeat left 12px center;}
.grid-btn .btn-minus{padding:8px 8px 6px 30px; background:url(../images/common/ico-minus.png) #F2F5F9 no-repeat left 12px center;}
.grid-btn .btn-excell {padding:8px 10px 6px 34px; display: inline-block; background: url(../images/sub/btn-excel.png)#E9F3F0 no-repeat 12% center; color: #2E9B6F; border: 1px solid #2E9B6F;}
.grid-btn .btn-srch {border: none;}
.btn-grid-delete {display:inline-block; width: 30px; height: 22px; background:url(../images/common/btn-grid-delete.png) no-repeat center; border-radius: 10px;}

 /* Btn 권한 */
 .btn-arrow-wrap {margin: auto 10px;}
 .btn-arrow-wrap ul li:first-child {margin-bottom: 15px;}
 .btn-arrow-wrap ul li a {display: inline-block; background-color: #737A8D; background-repeat: no-repeat; background-position: 50% 50%; border: 1px solid #919191; border-radius: 4px; padding: 5px 10px; width: 36px; height: 65px;}
 .btn-arrow-wrap ul li a.btn-arrow-right {background-image: url(../images/sub/btn-arrow-right.png);}
 .btn-arrow-wrap ul li a.btn-arrow-left {background-image: url(../images/sub/btn-arrow-left.png);}

/* Btn */
/* .btn-print {display: inline-block; background: url(../images/sub/ico-printer.png)#ED242C no-repeat 20% center; padding:12px 15px 12px 38px; color:#fff; border-radius: 5px;} */
.btn-view {display:inline-block; background:url(../images/common/backup/ico-view.png) no-repeat 16% 50%; white-space: nowrap; border-radius: 4px; color:#0184E4; font-size: 14px; width:22px; height:30px; line-height: normal; margin-top: -2px;}


/*=================================================================================
 * Description 설명글 스타일
 =================================================================================*/
.des-red {background-color: #ffeef2; color:#ed242c; display: flex; align-items: center;}
.des-red .black {margin: 0 4px;}
.des-box {margin-top: 10px; padding: 10px; border-radius: 10px; background: #fff3f3;}
.des-box > li {padding:0 0 5px 20px; color: #ed242c;}
.des-box > li:before {content:""; display:inline-block; width:5px; height:5px; border-radius:3px; margin:-2px 7px 0 -12px; vertical-align:middle; background:#f8002f;}
.des-box > li:last-child {padding-bottom: 0;}
.pop-des-box {margin-top: 10px; padding: 25px; border-radius: 10px; background: #fff3f3;}
.pop-des-box > li {padding:0 0 15px 20px; color: #ed242c; font-size: 20px; font-weight: 600;}
.pop-des-box > li:before {content:""; display:inline-block; width:30px; height:30px; margin:-2px 7px 0 -12px; vertical-align:middle; background:url(../images/common/ico-check-red.png)no-repeat center;}
.pop-des-box > li:last-child {padding-bottom: 0;}



/*=================================================================================
 * 결재선 스타일
 =================================================================================*/
 .dragbox-wrap {
    max-height: 60px;
 }
 .drag-wrap {
    display: flex;
    user-select: none;
  }
  
.drag-wrap div {
    font-size: 14px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.drag-wrap ul li:nth-child(1) {
    font-size: 13px;
    color: #e50019;
}
.drag-wrap ul li:nth-child(2) {
    margin-top: 4px;
    font-size: 16px;
    font-weight: 600;
    text-align: left;
}
.drag-wrap ul li > span {font-size: 12px; font-weight: 400; margin-left: 4px;}
.drag-wrap.tit .sanctn{
    height: 68px;
    border-radius: 0 0 10px 10px;
}

.jbrp-div {
    margin-right: 20px;
    width: 120px;
    background-color: #1e2e41;
    color:#fff;
    padding: 4px;
    cursor: grab;
    border-radius: 10px 10px 0 0;
}

.sanctn, .coop, .refe {
    position: relative;
    margin-right: 20px;
    width: 20%;
    height: 70px;
    border: 1px solid #1e2e41;
    cursor: grab;
    border-radius: 10px;
}
.coop, .refe {
    min-width: 100px;
}
.sanctn:last-child, .coop:last-child, .refe:last-child, .jbrp-div:last-child {
    margin-right: 0;
}

.remove-sanctn {
    background: url(../images/common/btn-close.png)#bfbfbf no-repeat center;
    background-size: 10px 10px;
    cursor: pointer;
    position: absolute;
    top: -4px;
    right: -4px;
    width: 20px;
    height: 20px;
    border-radius: 10px;
}

.coop-ele {
    width: 80px;
    height: 80px;
    border: 1px solid black;
}

/*=================================================================================
 * UI Style
 =================================================================================*/
/* 스타일 초기화 */ 
select {-webkit-appearance: none; -moz-appearance: none; appearance: none;}
select::-ms-expand { display: none; } /* IE 에서 Select box 화살표 제거 */ 
/*select:focus-visible {border: 1px solid #0E3570; outline: 0;}*/

/* input 기본 스타일 초기화 */
input {-webkit-appearance: none; -moz-appearance: none; appearance: none;}
input::-ms-clear { display: none; } /* IE10 이상에서 input box 에 추가된 지우기 버튼 제거 */
input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {-webkit-appearance: none; -moz-appearance: none; appearance: none;} /* input type number 에서 화살표 제거 */
.vue-treeselect__control {width: 100% !important;}

/* ★공통 기본 스타일 */
input, select, textarea {
    font-family: 'Inter'; 
    font-size: 16px;
    line-height: 30px;
    border:1px solid #DEE2E7;
    padding:0 10px; 
    border-radius:4px; 
    color:#333333;
    background:#fff;
    height: 40px;
}

input::placeholder, select::placeholder, textarea::placeholder {
    color:#333333;
    opacity: 1;
}

input:focus-visible,
select:focus-visible,
textarea:focus-visible {
    outline: none;
    border-color: #D9D9D9;
    box-shadow: 0 0 0 2px rgba(74,144,226,0.25);
}
/* ... */

